<resources>
    <string name="app_name">Calculator</string>
    <string name="equal">=</string>
    <string name="zero">0</string>
    <string name="dot">.</string>
    <string name="percentage">%</string>
    <string name="multiply">*</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="divide">/</string>
    <string name="del">DEL</string>
    <string name="ac">AC</string>
</resources>