<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#272727"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/expression"
        android:layout_width="408dp"
        android:layout_height="97dp"
        android:layout_marginTop="4dp"
        android:gravity="center|right"
        android:paddingRight="20dp"
        android:text=""
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/result"
        android:layout_width="400dp"
        android:layout_height="56dp"
        android:gravity="center|right"
        android:paddingRight="20dp"
        android:text=""
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expression" />

    <LinearLayout
        android:layout_width="413dp"
        android:layout_height="470dp"
        android:layout_marginTop="20dp"
        android:background="#272727"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="95dp"
            android:orientation="horizontal">


            <Button
                android:id="@+id/AC"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="4"
                android:backgroundTint="#EF4444"
                android:onClick="clear"
                android:text="@string/ac"
                android:textColor="@color/white"

                android:textSize="@dimen/calcButtonTextSize" />

            <Button
                android:id="@+id/delete"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="6"
                android:backgroundTint="#EF4444"

                android:onClick="back"
                android:text="@string/del"
                android:textColor="@color/white"
                android:textSize="@dimen/calcButtonTextSize" />

            <Button
                android:id="@+id/divide"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:onClick="onclicksimple"
                android:text="@string/divide"
                android:textColor="@color/white"
                android:textSize="@dimen/calcButtonTextSize" />

        </LinearLayout>

        <View
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="0dp"
            android:background="@color/white" />

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="95dp"
            android:orientation="horizontal">


            <Button
                android:id="@+id/seven"

                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:onClick="onclicksimple"
                android:text="@string/_7"
                android:textColor="@color/white"
                android:textSize="@dimen/calcButtonTextSize" />

            <Button
                android:id="@+id/eight"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:onClick="onclicksimple"
                android:text="@string/_8"
                android:textColor="@color/white"
                android:textSize="@dimen/calcButtonTextSize"

                />

            <Button
                android:id="@+id/nine"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:onClick="onclicksimple"
                android:text="@string/_9"
                android:textColor="@color/white"
                android:textSize="@dimen/calcButtonTextSize" />

            <Button

                android:id="@+id/multiplyy"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"

                android:background="?android:attr/selectableItemBackground"
                android:onClick="onclicksimple"
                android:text="@string/multiply"
                android:textColor="@color/white"
                android:textSize="@dimen/calcButtonTextSize" />


        </LinearLayout>

        <View
            android:id="@+id/view4"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="0dp"
            android:background="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="95dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/four"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:onClick="onclicksimple"
                android:text="4"
                android:textColor="@color/white"
                android:textSize="@dimen/calcButtonTextSize" />

            <Button
                android:id="@+id/five"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:onClick="onclicksimple"
                android:text="5"
                android:textColor="@color/white"
                android:textSize="@dimen/calcButtonTextSize" />

            <Button
                android:id="@+id/six"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:onClick="onclicksimple"
                android:text="6"
                android:textColor="@color/white"
                android:textSize="@dimen/calcButtonTextSize" />

            <Button
                android:id="@+id/minus"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"

                android:background="?android:attr/selectableItemBackground"
                android:onClick="onclicksimple"
                android:text="-"
                android:textColor="@color/white"
                android:textSize="@dimen/calcButtonTextSize" />


        </LinearLayout>

        <View
            android:id="@+id/view5"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="0dp"
            android:background="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="95dp"
            android:orientation="horizontal">


            <Button
                android:id="@+id/one"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:onClick="onclicksimple"
                android:text="1"
                android:textColor="@color/white"
                android:textSize="@dimen/calcButtonTextSize" />

            <Button
                android:id="@+id/two"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:onClick="onclicksimple"
                android:text="2"
                android:textColor="@color/white"
                android:textSize="@dimen/calcButtonTextSize" />

            <Button
                android:id="@+id/three"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:onClick="onclicksimple"
                android:text="3"
                android:textColor="@color/white"
                android:textSize="@dimen/calcButtonTextSize" />

            <Button
                android:id="@+id/plus"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:onClick="onclicksimple"
                android:text="+"
                android:textColor="@color/white"
                android:textSize="@dimen/calcButtonTextSize" />


        </LinearLayout>

        <View
            android:id="@+id/view7"

            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="0dp"
            android:background="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="95dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/percentage"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"

                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:onClick="onclicksimple"
                android:text="@string/percentage"
                android:textColor="@color/white"
                android:textSize="@dimen/calcButtonTextSize" />

            <Button
                android:id="@+id/dot"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="2dp"

                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:onClick="onclicksimple"
                android:text="@string/dot"
                android:textColor="@color/white"
                android:textSize="@dimen/calcButtonTextSize" />

            <Button
                android:id="@+id/zero"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:onClick="onclicksimple"
                android:text="@string/zero"
                android:textColor="@color/white"
                android:textSize="@dimen/calcButtonTextSize" />


            <Button
                android:id="@+id/equal"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="2"
                android:backgroundTint="#42B112"
                android:text="@string/equal"
                android:onClick="equal"
                android:textColor="@color/white"
                android:textSize="@dimen/calcButtonTextSize" />


        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>